# ecotrack

./: app.py  app_enhanced.py  constants.py  constants_enhanced.py  pyproject.toml
analysis/: indicators.py  investment.py  investment_enhanced.py  recommendations.py
charts/: builders.py  builders_enhanced.py
config/: keys.py
data/: global_markets.py  te.py  te_enhanced.py  us.py  vn.py  vn_enhanced.py
ui/: pages.py  pages_enhanced.py
utils/: analytics.py  logging.py
